--- a/style.css
+++ b/style.css
@@ -11,36 +11,44 @@ body {
     background-image: linear-gradient(to left, #f3f2ee,  #ececec);
 }
 
+header {
+    width: 90vw;
+}
+
 h1 { 
 font-family: "Money Plus";
 text-align: center;
 font-size: 5em;
 font-weight: 100;
 text-shadow: 1px 1px 1px rgb(12, 10, 10);
-padding-bottom: 0px;
 margin-bottom: 1px;
 
 }
 
+
+
+
 section {
-    margin: auto;
-   
-    height: 100%;
-    width: 100%;
+    display: flex;
+    width: 90vw;
+    margin: 150px;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    
+
 }
 
 div {
 
-display: inline-block;
+
 width: 375px;
-height: 375px;
-margin: auto;
+height: 466px;
 text-align: center;
 border-radius: 10px;
 }
 
 table {
- table-layout: auto;
+
 background-color: #594B02;
 width: 375px;
 height: 375px;
@@ -52,20 +60,61 @@ box-shadow: 3px 3px 3px rgb(14, 13, 13);
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.button { 
+    font-family: "Money";
+    text-align: center;
+    font-size: 9.5em;
+    font-weight: 100;
+    text-shadow: 1px 1px 1px rgb(12, 10, 10);
+    height: 185px;
+    width: 185px;
+    border-radius: 150px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 10px;
+    margin-left: 10px;
+    
+    
+    }
+
 td {
     border: 1px solid whitesmoke;
     border-radius: 10px;
 }
 
-input {
-    height: 185px;
-    width: 185px;
-    margin-right: auto;
-    border-radius: 150px;
-    background-image: radial-gradient(#ffe749,#f5d01b );
-    border: 3px solid #080702;
-    font-size: 1.9em;
-    font-family: "Money";
-    box-shadow: 1px 1px 1px rgb(17, 17, 17);
-    text-align: center;
+@media (max-width: 1225px) {
+   
+
+    section {
+        display: block;
+        height: 1400px;
+        margin: auto;
+    }
+    .button {
+    margin-top: 10px;
+    margin-left: 90px;
+    margin-right: 90px;
+    
+    }
+
+    div {
+        margin-bottom: 10px;
+        margin-top: 10px;
+        width: 100vw;
+    }
+    header h1 {
+        width: 100vw; 
+        font-size: 3em;
+    }
+
+    p {
+        width: 90vw;
+    }
+    table {
+        width: 100vw;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+
 }
+
