--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ td {
 
     section {
         display: block;
-        height: 1400px;
+        height: 1300;
         margin: auto;
     }
     .button {
@@ -105,16 +105,24 @@ td {
     header h1 {
         width: 100vw; 
         font-size: 3em;
+        width: auto;
     }
 
     p {
-        width: 90vw;
+        width: auto;
     }
-    table {
-        width: 100vw;
-        margin-bottom: 10px;
-        margin-top: 10px;
-    }
+    
 
 }
 
+@media (min-width: 1256px) {
+
+   section {
+        display: flex;
+        margin: 250px;
+        margin-top: 1px;
+        margin-bottom: 1px;
+        
+    
+    }
+}
