--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 body {
     background-image: linear-gradient(to left, #f3f2ee,  #ececec);
-    width: 100vw;
+    width: 90vw;
 }
 
 header {
@@ -22,7 +22,7 @@ text-align: center;
 font-size: 5em;
 font-weight: 100;
 text-shadow: 1px 1px 1px rgb(12, 10, 10);
-margin-bottom: 1px;
+margin-bottom: 0px;
 
 }
 
@@ -83,6 +83,9 @@ td {
     border: 1px solid whitesmoke;
     border-radius: 10px;
 }
+p {
+    margin: 0px;
+}
 
 a {
     font-family: Money;
@@ -125,15 +128,19 @@ a {
     }
     .button {
     margin-top: 10px;
-    margin-left: 90px;
+    margin-bottom: 10px;
+    margin-left: 45px;
     margin-right: 90px;
+    text-shadow: 2px 2px 2px rgb(12, 10, 10);
     
     }
 
     div {
-        margin-bottom: 10px;
+        height: 400px;
         margin-top: 10px;
+        margin-left: 2px;
         width: 100vw;
+        
     }
     header h1 {
         width: 100vw; 
@@ -147,6 +154,18 @@ a {
 
     .desconto {
         font-size: 20px;
+    }
+
+    table {
+        background-color: #594B02;
+        width: 300px;
+        height: 375px;
+        border: 1px solid whitesmoke;
+        font-size: 25px;
+        color: #ffdb00;
+        border-radius: 10px;
+        box-shadow: 3px 3px 3px rgb(14, 13, 13);
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     
 
