--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@
 }
 body {
     background-image: linear-gradient(to left, #f3f2ee,  #ececec);
-    width: 90vw;
+    
 }
 
 header {
-    width: 90vw;
+    
 }
 
 h1 { 
@@ -30,22 +30,11 @@ margin-bottom: 0px;
 
 
 section {
-    display: flex;
-    width: 90vw;
-    margin: 150px;
+    margin: auto;
     margin-top: 1px;
     margin-bottom: 1px;
     
 
-}
-
-div {
-
-
-width: 375px;
-height: 466px;
-text-align: center;
-border-radius: 10px;
 }
 
 table {
@@ -136,13 +125,7 @@ a {
     
     }
 
-    div {
-        height: 400px;
-        margin-top: 10px;
-        margin-left: 2px;
-        width: 100vw;
-        
-    }
+    
     header h1 {
         width: 100vw; 
         font-size: 3em;
@@ -175,12 +158,13 @@ a {
 @media (min-width: 1256px) {
 
    section {
+       width: 900px;
         display: flex;
-        margin: 250px;
-        margin-top: 1px;
-        margin-bottom: 1px;
-        
+        margin: auto;
+    }
     
+    table {
+        margin: auto;
     }
 }
 
