--- a/style.css
+++ b/style.css
@@ -51,6 +51,20 @@ box-shadow: 3px 3px 3px rgb(14, 13, 13);
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+thead{
+    border: 1px solid white;
+    font-weight: bold;
+    
+}
+
+th {
+    color: white;
+    font-weight: lighter;
+}
+
+
+
+
 .button { 
     background-image: radial-gradient(#ffe749,#f5d01b);
     font-family: "Money";
