--- a/style.css
+++ b/style.css
@@ -103,9 +103,10 @@ a {
    
 
     section  {
-        display: block;
-        height: 1300;
-        margin: auto;   
+        display:flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .comercial {
@@ -118,12 +119,10 @@ a {
     .titulo {
         width: 100vw; 
         font-size: 3em;
-        width: auto;
     }
 
     a {
         font-size: 5em;
-        margin: auto;
     }
 
     .h1comercial {
@@ -140,7 +139,6 @@ a {
     
     }
 
-    
     header h1 {
         width: 100vw; 
         font-size: 3em;
@@ -166,11 +164,9 @@ a {
         box-shadow: 3px 3px 3px rgb(14, 13, 13);
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
-    
-
 }
 
-@media (min-width: 1256px) {
+@media (min-width: 770px) {
 
    section {
        width: 900px;
@@ -187,7 +183,6 @@ tr :hover {
     background: rgb(18, 19, 18);
     color: rgb(247, 231, 8);
 }
-
 
 .blockPrice {
     width: 20px;
