--- a/style.css
+++ b/style.css
@@ -199,6 +199,11 @@ animation: anime 3s 2s linear forwards;
 border-radius: 0px;
 }
 
+.animeChange2 {
+    animation: anime 3s 2s linear forwards;
+    border-radius: 0px;
+    }
+
 @keyframes anime {
 
 0%{transform: rotateY(0deg) translateX(0px)}
@@ -215,5 +220,11 @@ border-radius: 0px;
     background: red;
 }
 
+@keyframes anime2 {
 
+    0%{transform: rotateY(0deg) translateX(0px)}
+    100%{transform: rotatey(360deg) translateX(0px) }
+    
+    
+    }
 
