--- a/style.css
+++ b/style.css
@@ -192,6 +192,22 @@ tr :hover {
     border-radius: 20px;
 }
 
+.refreshPrice {
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+    padding: 3px;
+}
+
+.refreshPrice:hover {
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+    padding: 3px;
+}
+
+
+
 .none {
     display: none;
 }
