--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ section {
 
 table {
 
-background-color: #594B02;
+background-color: #969594;
 border-collapse: collapse;
 width: 375px;
 height: 375px;
@@ -84,10 +84,14 @@ th {
 
     }
 
-td {
+td, .tds {
+    background: #594B02;
     border: 1px solid whitesmoke;
-    border-radius: 10px;
+    
 }
+
+
+
 p {
     margin: 0px;
 }
@@ -154,7 +158,7 @@ a {
     }
 
     table {
-        background-color: #594B02;
+        background-color: #969594;
         width: 300px;
         height: 375px;
         border: 1px solid whitesmoke;
@@ -213,12 +217,12 @@ tr :hover {
 }
 
 .animeChange {
-animation: anime 3s 2s linear forwards;
+animation: anime 2s 2s linear forwards;
 border-radius: 0px;
 }
 
 .animeChange2 {
-    animation: anime 3s 2s linear forwards;
+    animation: anime2 2s 2s linear forwards;
     border-radius: 0px;
     }
 
