--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ th {
     text-shadow: 1px 1px 1px rgb(12, 10, 10);
     height: 185px;
     width: 185px;
-    border-radius: 150px;
+    border-radius: 50%;
     margin-top: auto;
     margin-bottom: auto;
     margin-right: 10px;
@@ -215,7 +215,6 @@ border-radius: 0px;
 0%{transform: rotateY(0deg) translateX(0px)}
 100%{transform: rotatey(360deg) translateX(0px) }
 
-
 }
 
 .on{
@@ -230,7 +229,5 @@ border-radius: 0px;
 
     0%{transform: rotateY(0deg) translateX(0px)}
     100%{transform: rotatey(360deg) translateX(0px) }
-    
-    
     }
 
