--- a/style.css
+++ b/style.css
@@ -126,8 +126,6 @@ a {
     .button {
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 45px;
-    margin-right: 90px;
     text-shadow: 2px 2px 2px rgb(12, 10, 10);
     
     }
@@ -164,6 +162,7 @@ a {
    section {
        width: 900px;
         display: flex;
+        justify-content: center;
         margin: auto;
     }
     
