--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ margin-bottom: 0px;
 }
 
 section {
+    display: flex;
+    align-items: center;
     margin: auto;
     margin-top: 1px;
     margin-bottom: 1px;
@@ -39,6 +41,7 @@ background-color: #969594;
 border-collapse: collapse;
 width: 375px;
 height: 375px;
+margin: 5px;
 border: 1px solid whitesmoke;
 font-size: 30px;
 color: #ffdb00;
@@ -149,6 +152,7 @@ a {
         width: 300px;
         height: 375px;
         border: 1px solid whitesmoke;
+        margin: 5px;
         font-size: 25px;
         color: #ffdb00;
         border-radius: 10px;
@@ -167,7 +171,7 @@ a {
     }
     
     table {
-        margin: auto;
+        margin: 5px;
     }
 }
 
