--- a/style.css
+++ b/style.css
@@ -12,10 +12,6 @@ body {
     
 }
 
-header {
-    
-}
-
 h1 { 
 font-family: "Money Plus";
 text-align: center;
@@ -37,7 +33,7 @@ section {
 
 table {
 
-background-color: #969594;
+background-color: #f1f1f0;
 border-collapse: collapse;
 width: 375px;
 height: 375px;
@@ -58,8 +54,8 @@ thead{
 }
 
 th {
-    color: white;
-    font-weight: lighter;
+    color: rgb(5, 5, 5);
+    font-weight: bold;
 }
 
 
@@ -146,7 +142,7 @@ a {
     }
 
     table {
-        background-color: #969594;
+        background-color: #ffffff;
         width: 300px;
         height: 375px;
         border: 1px solid whitesmoke;
