--- a/style.css
+++ b/style.css
@@ -99,8 +99,16 @@ a {
     font-size: 20em;
 }
 
+footer p{
+    font-size: 15px;
+    font-style: oblique;
+    font-weight: 600;
+    text-align: center;
+}
 
-
+footer div a {
+    font-size: 7px;
+}
 
 
 @media (max-width: 768px) {
@@ -165,6 +173,18 @@ a {
         box-shadow: 3px 3px 3px rgb(14, 13, 13);
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
+
+    footer p{
+        font-size: 15px;
+        font-style: oblique;
+        font-weight: 600;
+        text-align:right;
+    }
+    
+    footer div a {
+        font-size: 7px;
+    }
+    
 }
 
 @media (min-width: 770px) {
@@ -179,6 +199,18 @@ a {
     table {
         margin: 5px;
     }
+
+    footer p{
+        font-size: 15px;
+        font-style: oblique;
+        font-weight: 600;
+        text-align: right;
+    }
+    
+    footer div a {
+        font-size: 7px;
+    }
+    
 }
 
 tr :hover {
